link readability tweak/small spacing fixes

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,3 +1,3 @@
 .header-box {
-    background: teal;
+    background: linear-gradient(to right, #80879b, #d7dde8);
 }
